# github-pr-tutorial

./: .gitignore  INSTRUCOES.md  PROFESSOR.md  README.md  pyproject.toml
.exercicio_zero/: configure  project
.github/workflows/: grade.yml
src/: zero.py
